--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 Sector[[:space:]]Information.xlsx filter=lfs diff=lfs merge=lfs -text
 Stock_Returns_Data.xlsx filter=lfs diff=lfs merge=lfs -text
 .xlsx filter=lfs diff=lfs merge=lfs -text
+.csv filter=lfs diff=lfs merge=lfs -text
