--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,7 @@ Sector[[:space:]]Information.xlsx filter=lfs diff=lfs merge=lfs -text
 Stock_Returns_Data.xlsx filter=lfs diff=lfs merge=lfs -text
 .xlsx filter=lfs diff=lfs merge=lfs -text
 .csv filter=lfs diff=lfs merge=lfs -text
+Stock_Financial_Ratios_Data_2022.csv filter=lfs diff=lfs merge=lfs -text
+Stock_Returns_Data_raw.csv filter=lfs diff=lfs merge=lfs -text
+scaled_train_df.csv filter=lfs diff=lfs merge=lfs -text
+test_df.csv filter=lfs diff=lfs merge=lfs -text
